--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "miragejs": "^0.1.45",
     "typescript": "4.7.4"
   }
 }
